<resources>
    <string name="app_name">miIkea</string>
    <string name="action_settings">Settings</string>
    <string name="bienvenido_Ikea">Descubre tus nuevos muebles</string>
    <string name="btn_Entrar">Acceder</string>
    <string name="txtAutenticar">Introduzca sus datos para entrar:</string>
    <string name="txtUsuario">Usuario:</string>
    <string name="lblPassword">Contraseña:</string>
    <string name="btnLogin">Entrar</string>
    <string name="btnCuenta">¿No tiene cuenta? Resgístrese</string>
    <string name="txtNombreNuevo">Introduzca su mail:</string>
    <string name="txtContrasena">Contraseña:</string>
    <string name="lblRepiteContrasena">Repite la contraseña:</string>
    <string name="btnRegistrarse">Registrar</string>
    <string name="btnVolver">Volver</string>
    <string name="lblSeleccionado" />
    <string name="btnCargarProductos">Listar productos...</string>

    <string name="menuAniadirMueble">Añadir mueble</string>
    <string name="menuAcercaDe">Acerca de...</string>
    <string name="btnAgregarMueble">Añadir mueble...</string>

    <string name="menuContextVerDetalles">Ver detalles</string>
    <string name="menuContextBorrarMueble">Borrar mueble</string>
    <string name="lblNombre">Nombre</string>
    <string name="lblPrecio">Precio (€)</string>
    <string name="lblCategoria">Tipo</string>
    <string name="lblDescripcion">Descripción</string>
    <string name="btnGuardar">Guardar cambios</string>
    <string name="btnRegistrar">Registrarse</string>
    <string name="title_activity_listado">Listado</string>
    <string name="title_activity_aniadir_mueble">AniadirMueble</string>
    <string name="btnAniadir">Añadir nuevo mueble</string>

</resources>
