<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtEspacio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtUsuario" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblPassword" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCuenta" />
</LinearLayout>