<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblNombreNuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNombreNuevo"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lblContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtContrasena"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lblRepiteContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblRepiteContrasena"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtRepiteContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegistrarse" />
</LinearLayout>