<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ipo2.esi.miikea.DetallesMueble">

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGuardar"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="163dp" />

    <TableLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:onClick="oyente_btnGuardar"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblNombre"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblPrecio"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtPrecio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblCategoria"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblDescripcion"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtDescripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>
